[ENG-727]: Payments DB schemas &  Atomic phase implementation for accounts (#3)
* Adding Atomic phase implementation for accounts

* working account creation

* updated getAccount

* finalize data model for payments
