# api/openapi.yaml
@@ -401,6 +401,89 @@ paths:
       summary: Retrieve account balances
       tags:
       - balances
+  /accounts/{id}/details:
+    get:
+      description: |
+        Get the details for an account.
+        This endpoint is used to retrieve the details for a single account.
+      operationId: getAccountDetails
+      parameters:
+      - description: The unique identifier for the account
+        explode: false
+        in: path
+        name: id
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccountDetails'
+          description: The details were retrieved
+        "400":
+          content:
+            application/json:
+              example:
+                timestamp: 2020-07-10 15:00:00.000
+                code: 400
+                error: Bad Request
+                message: Expected an API key to be provided in the header `x-chariot-api-key`
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: The request is invalid or contains invalid parameters
+          headers:
+            X-Request-Id:
+              $ref: '#/components/headers/X-Request-Id'
+        "401":
+          content:
+            application/json:
+              example:
+                timestamp: 2020-07-10 15:00:00.000
+                code: 401
+                error: Unauthorized
+                message: Unauthorized
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Unauthorized. The request is missing the security (OAuth2 Bearer
+            token) requirements and the server is unable to verify the identify of
+            the caller.
+          headers:
+            X-Request-Id:
+              $ref: '#/components/headers/X-Request-Id'
+        "403":
+          content:
+            application/json:
+              example:
+                timestamp: 2020-07-10 15:00:00.000
+                code: 403
+                error: Forbidden
+                message: User is not allowed to access this resource
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Access denied
+          headers:
+            X-Request-Id:
+              $ref: '#/components/headers/X-Request-Id'
+        "404":
+          content:
+            application/json:
+              example:
+                timestamp: 2020-07-10 15:00:00.000
+                code: 404
+                error: Not Found
+                message: Resource is not found
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Resource Not Found
+          headers:
+            X-Request-Id:
+              $ref: '#/components/headers/X-Request-Id'
+      summary: Retrieve account details
+      tags:
+      - accounts
   /transfers:
     get:
       description: |
@@ -1528,12 +1611,11 @@ components:
   schemas:
     Account:
       example:
-        account_number: "1234567890"
+        us_bank_account_id: "1234567890"
         name: Payer FBO Account
         created_at: 2000-01-23T04:56:07.000+00:00
         id: "1234567890"
-        routing_number: "123456789"
-        status: open
+        us_bank_account_number_id: "1234567890"
       properties:
         id:
           description: The unique identifier for the account
@@ -1544,6 +1626,57 @@ components:
           description: The name of the account
           example: Payer FBO Account
           type: string
+        us_bank_account_id:
+          description: The unique identifier for the US bank account
+          example: "1234567890"
+          readOnly: true
+          type: string
+        us_bank_account_number_id:
+          description: The unique identifier for the US bank account number
+          example: "1234567890"
+          readOnly: true
+          type: string
+        created_at:
+          description: The date and time the account was created
+          format: date-time
+          readOnly: true
+          type: string
+      type: object
+    AccountList:
+      description: A list of accounts
+      example:
+        data:
+        - us_bank_account_id: "1234567890"
+          name: Payer FBO Account
+          created_at: 2000-01-23T04:56:07.000+00:00
+          id: "1234567890"
+          us_bank_account_number_id: "1234567890"
+        - us_bank_account_id: "1234567890"
+          name: Payer FBO Account
+          created_at: 2000-01-23T04:56:07.000+00:00
+          id: "1234567890"
+          us_bank_account_number_id: "1234567890"
+        paging:
+          cursors:
+            before: eyJpZCI6IjEyMzQ1Njc4OTAiLCJ0aW1lc3RhbXAiOiIyMDIwLTA3LTEwIDE1OjAwOjAwLjAwMCJ9
+            after: eyJpZCI6IjEyMzQ1Njc4OTAiLCJ0aW1lc3RhbXAiOiIyMDIwLTA3LTEwIDE1OjAwOjAwLjAwMCJ9
+          total: 100
+      properties:
+        data:
+          description: The list of accounts
+          items:
+            $ref: '#/components/schemas/Account'
+          type: array
+        paging:
+          $ref: '#/components/schemas/Pagination'
+      type: object
+    AccountDetails:
+      description: The details of an account
+      example:
+        account_number: "1234567890"
+        routing_number: "123456789"
+        status: open
+      properties:
         account_number:
           description: The account number
           example: "1234567890"
@@ -1563,41 +1696,6 @@ components:
           example: open
           readOnly: true
           type: string
-        created_at:
-          description: The date and time the account was created
-          format: date-time
-          readOnly: true
-          type: string
-      type: object
-    AccountList:
-      description: A list of accounts
-      example:
-        data:
-        - account_number: "1234567890"
-          name: Payer FBO Account
-          created_at: 2000-01-23T04:56:07.000+00:00
-          id: "1234567890"
-          routing_number: "123456789"
-          status: open
-        - account_number: "1234567890"
-          name: Payer FBO Account
-          created_at: 2000-01-23T04:56:07.000+00:00
-          id: "1234567890"
-          routing_number: "123456789"
-          status: open
-        paging:
-          cursors:
-            before: eyJpZCI6IjEyMzQ1Njc4OTAiLCJ0aW1lc3RhbXAiOiIyMDIwLTA3LTEwIDE1OjAwOjAwLjAwMCJ9
-            after: eyJpZCI6IjEyMzQ1Njc4OTAiLCJ0aW1lc3RhbXAiOiIyMDIwLTA3LTEwIDE1OjAwOjAwLjAwMCJ9
-          total: 100
-      properties:
-        data:
-          description: The list of accounts
-          items:
-            $ref: '#/components/schemas/Account'
-          type: array
-        paging:
-          $ref: '#/components/schemas/Pagination'
       type: object
     AccountBalance:
       description: The balance of an account
