# openapi/api_accounts.go
@@ -1,0 +1,241 @@
+/*
+ * Chariot Payments API
+ *
+ * The Chariot Payments REST API.
+ *
+ * API version: v1
+ * Contact: developers@givechariot.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"errors"
+	"net/http"
+	"strconv"
+
+	"github.com/chariot-giving/agapay/pkg/adb"
+	"github.com/chariot-giving/agapay/pkg/auth"
+	"github.com/chariot-giving/agapay/pkg/bank"
+	"github.com/chariot-giving/agapay/pkg/cerr"
+	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"github.com/increase/increase-go"
+	"go.uber.org/zap"
+)
+
+// CreateAccount - Create an account
+func CreateAccount(c *gin.Context) {
+	logger := c.Value("logger").(*zap.Logger)
+
+	requestBody := new(Account)
+	err := c.Bind(requestBody)
+	if err != nil {
+		c.Error(cerr.NewBadRequest("invalid request body", err))
+		return
+	}
+
+	idempotencyKey := c.GetHeader("Idempotency-Key")
+	if idempotencyKey == "" {
+		idempotencyKey = uuid.NewString()
+	}
+	c.Header("Idempotency-Key", idempotencyKey)
+
+	logger.Info("creating account", zap.String("idempotency_key", idempotencyKey))
+
+	params := make(map[string]string)
+	for _, v := range c.Params {
+		params[v.Key] = v.Value
+	}
+	request := &adb.IdempotentRequest{
+		UserId:         auth.UserId(c),
+		IdempotencyKey: idempotencyKey,
+		Method:         c.Request.Method,
+		Path:           c.Request.URL.Path,
+		Params:         params,
+		Body:           requestBody,
+	}
+	key, err := adb.AgapayDatabase.UpsertIdempotencyKey(request)
+	if err != nil {
+		cErr := new(cerr.HttpError)
+		if errors.As(err, &cErr) {
+			c.Error(cErr)
+			return
+		}
+		c.Error(cerr.NewInternalServerError("failed to upsert idempotency key", err))
+		return
+	}
+
+	logger.Info("idempotency key upserted", zap.String("idempotency_key", idempotencyKey))
+
+	account := new(adb.Account)
+
+	// start the state machine
+	for {
+		switch key.RecoveryPoint {
+		case adb.RecoveryPointStarted:
+			// create the account
+			account = &adb.Account{
+				IdempotencyKeyId: key.Id,
+				UserId:           strconv.FormatUint(key.UserId, 10),
+				Name:             requestBody.Name,
+			}
+			_, err := adb.AgapayDatabase.CreateAccount(c, key, account)
+			if err != nil {
+				cErr := new(cerr.HttpError)
+				if errors.As(err, &cErr) {
+					c.Error(cErr)
+					return
+				}
+				c.Error(cerr.NewInternalServerError("failed to create account", err))
+				return
+			}
+		case adb.RecoveryPointAccountCreated:
+			// create the bank account
+			_, err := adb.AgapayDatabase.CreateBankAccount(c, key, account)
+			if err != nil {
+				cErr := new(cerr.HttpError)
+				if errors.As(err, &cErr) {
+					c.Error(cErr)
+					return
+				}
+				c.Error(cerr.NewInternalServerError("failed to create bank account", err))
+				return
+			}
+		case adb.RecoveryPointBankAccountCreated:
+			// create the bank account number
+			_, err := adb.AgapayDatabase.CreateBankAccountNumber(c, key, account)
+			if err != nil {
+				cErr := new(cerr.HttpError)
+				if errors.As(err, &cErr) {
+					c.Error(cErr)
+					return
+				}
+				c.Error(cerr.NewInternalServerError("failed to create bank account number", err))
+				return
+			}
+		case adb.RecoveryPointFinished:
+			// we're done
+		default:
+			c.Error(cerr.NewInternalServerError("bug: unknown recovery point", nil))
+			return
+		}
+
+		// if we're done, break out of the loop
+		if key.RecoveryPoint == adb.RecoveryPointFinished {
+			break
+		}
+	}
+
+	c.JSON(key.ResponseCode, key.ResponseBody)
+}
+
+// GetAccount - Retrieve an account
+func GetAccount(c *gin.Context) {
+	id := c.Param("id")
+
+	account, err := adb.AgapayDatabase.GetAccount(c, id)
+	if err != nil {
+		cErr := new(cerr.HttpError)
+		if errors.As(err, &cErr) {
+			c.Error(cErr)
+			return
+		}
+		c.Error(cerr.NewInternalServerError("failed to retrieve account", err))
+		return
+	}
+
+	c.JSON(http.StatusOK, &account)
+}
+
+// GetAccountDetails - Retrieve account details
+func GetAccountDetails(c *gin.Context) {
+	id := c.Param("id")
+
+	bankAccount, err := bank.IncreaseClient.Accounts.Get(c, id)
+	if err != nil {
+		c.JSON(http.StatusBadGateway, cerr.NewBadGatewayError("error retrieving account", err))
+		return
+	}
+
+	accountNumbers, err := bank.IncreaseClient.AccountNumbers.List(c, increase.AccountNumberListParams{
+		AccountID: increase.String(bankAccount.ID),
+		Status:    increase.F[increase.AccountNumberListParamsStatus](increase.AccountNumberListParamsStatusActive),
+	})
+	if err != nil {
+		c.JSON(http.StatusBadGateway, cerr.NewBadGatewayError("error retrieving account numbers", err))
+		return
+	}
+
+	if len(accountNumbers.Data) == 0 {
+		c.JSON(http.StatusNotFound, cerr.NewNotFoundError("account number not found", nil))
+		return
+	}
+
+	accountNo := accountNumbers.Data[0]
+
+	// TODO: create audit log record for accessing account details
+
+	accountDetails := AccountDetails{
+		AccountNumber: accountNo.AccountNumber,
+		RoutingNumber: accountNo.RoutingNumber,
+		Status:        string(bankAccount.Status),
+	}
+
+	c.JSON(http.StatusOK, accountDetails)
+}
+
+// ListAccounts - List accounts
+func ListAccounts(c *gin.Context) {
+	limitQuery := c.DefaultQuery("limit", "100")
+	limit, err := strconv.ParseInt(limitQuery, 10, 64)
+	if err != nil {
+		limit = 100
+	}
+
+	listParams := increase.AccountListParams{
+		Limit: increase.Int(limit),
+	}
+
+	cursor, ok := c.GetQuery("cursor")
+	if ok {
+		listParams.Cursor = increase.String(cursor)
+	} else {
+		listParams.Cursor = increase.Null[string]()
+	}
+
+	// this comes from auth middleware
+	entity := c.Value("entity")
+	if entity != nil {
+		listParams.EntityID = increase.String(entity.(string))
+	}
+
+	response, err := bank.IncreaseClient.Accounts.List(c, listParams)
+	if err != nil {
+		c.JSON(http.StatusBadGateway, cerr.NewBadGatewayError("error listing accounts", err))
+		return
+	}
+
+	accounts := make([]Account, len(response.Data))
+	for i, bankAccount := range response.Data {
+		accounts[i] = Account{
+			Id:        bankAccount.ID,
+			Name:      bankAccount.Name,
+			CreatedAt: bankAccount.CreatedAt,
+		}
+	}
+
+	accountList := AccountList{
+		Data: accounts,
+		Paging: Pagination{
+			Total: int32(len(response.Data)),
+			Cursors: PaginationCursors{
+				Before: cursor,
+				After:  response.NextCursor,
+			},
+		},
+	}
+
+	c.JSON(http.StatusOK, &accountList)
+}
