# openapi/model_account.go
@@ -1,0 +1,33 @@
+/*
+ * Chariot Payments API
+ *
+ * The Chariot Payments REST API.
+ *
+ * API version: v1
+ * Contact: developers@givechariot.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"time"
+)
+
+type Account struct {
+
+	// The unique identifier for the account
+	Id string `json:"id,omitempty"`
+
+	// The name of the account
+	Name string `json:"name,omitempty"`
+
+	// The unique identifier for the US bank account
+	UsBankAccountId string `json:"us_bank_account_id,omitempty"`
+
+	// The unique identifier for the US bank account number
+	UsBankAccountNumberId string `json:"us_bank_account_number_id,omitempty"`
+
+	// The date and time the account was created
+	CreatedAt time.Time `json:"created_at,omitempty"`
+}
